added cart html and filled in rough layout

--- a/cart.html
+++ b/cart.html
@@ -85,14 +85,14 @@
           <td><div class="totals-amt">$1</div></td>
         </tr>
         <tr>
-          <th colspan='2' class="totals-label">Shipping: </th>
-          <td><div class="totals-amt">$5</div></td>
+          <th colspan='2' class="totals-label">Delivery: </th>
+          <td><div class="totals-amt">$-</div></td>
         </tr>
         
         <tr>
           <tfoot>
             <th colspan='2' class="full-total">TOTAL</th>
-            <td><div class="full-totalamt">$15</div></td>
+            <td><div class="full-totalamt">$10</div></td>
           </tfoot>
         </tr>
         
