--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 
     <header>
 
-      <h1><a href="#" class="logo"><em>HUNGRY BURGERS</em></a></h1>
+      <h1><a href="./main.html" class="logo"><em>HUNGRY BURGERS</em></a></h1>
 
       <nav>
         <ul>
           <li><a href="#">Navigation</a></li>
-          <li><a href="#">Cart</a></li>
+          <li><a href="./cart.html">Cart</a></li>
           <li><a href="#">Register</a></li>
         </ul>
-        <div class="login-btn"><a href="#"><b>LOGIN</b></a></div>
+        <div class="login-btn"><a href="./signin.html"><b>LOGIN</b></a></div>
       </nav>
 
     </header>
