--- a/index.html
+++ b/index.html
@@ -13,96 +13,99 @@
 <body>
 
     <header>
-
         <h1><a href="./index.html" id="logo">HUNGRY BURGERS</a></h1>
-
-      <nav>
-          <ul>
-              <a href="#"><li>Register/Login</li></a>
-              <a href="#"><li>Navigation</li></a>
-              <a href="./cart.html"><li id="cart-btn">Cart(0 Items)</li></a>
-              <div id="total-cost">$0</div>
-          </ul>
-      </nav>
-
-  </header>
+        <nav>
+            <ul>
+                <a href="./login.html" id="login-link">
+                    <li>Login/Register</li>
+                </a>
+                <a href="#">
+                    <li>Navigation</li>
+                </a>
+                <a href="./cart.html">
+                    <li id="cart-btn">Cart(0 Items)</li>
+                </a>
+                <div id="total-cost">$0</div>
+            </ul>
+        </nav>
+    </header>
 
     <div class="menu">
 
         <h2>MENU</h2>
 
         <div class="item">
-          <div class="content">
-            <img class="item-img" src="./images/plainburger.jpg" alt="">
-            <p class="item-desc">
-              <span class="item-name">Plain Burger</span>
-              <span class="item-price">$4</span>
-            </p>
-            <button class="addtocart-btn">Add to Cart</button>
-          </div>
+            <div class="content">
+                <img class="item-img" src="./images/plainburger.jpg" alt="">
+                <p class="item-desc">
+                    <span class="item-name">Plain Burger</span>
+                    <span class="item-price">$4</span>
+                </p>
+                <button class="addtocart-btn">Add to Cart</button>
+            </div>
         </div>
         <div class="item">
-          <div class="content">
-            <img class="item-img" src="./images/chickenburger.jpg" alt="">
-            <p class="item-desc">
-              <span class="item-name">Chicken Burger</span>
-              <span class="item-price">$5</span>
-            </p>
-            <button class="addtocart-btn">Add to Cart</button>
-          </div>
+            <div class="content">
+                <img class="item-img" src="./images/chickenburger.jpg" alt="">
+                <p class="item-desc">
+                    <span class="item-name">Chicken Burger</span>
+                    <span class="item-price">$5</span>
+                </p>
+                <button class="addtocart-btn">Add to Cart</button>
+            </div>
         </div>
         <div class="item">
-          <div class="content">
-            <img class="item-img" src="./images/cheeseburger.jpg" alt="">
-            <p class="item-desc">
-              <span class="item-name">Quarter-Pounder With Cheese</span>
-              <span class="item-price">$6</span>
-            </p>
-            <button class="addtocart-btn">Add to Cart</button>
-          </div>
+            <div class="content">
+                <img class="item-img" src="./images/cheeseburger.jpg" alt="">
+                <p class="item-desc">
+                    <span class="item-name">Quarter-Pounder With Cheese</span>
+                    <span class="item-price">$6</span>
+                </p>
+                <button class="addtocart-btn">Add to Cart</button>
+            </div>
         </div>
         <div class="item">
-          <div class="content">
-            <img class="item-img" src="./images/cheeseburger.jpg" alt="">
-            <p class="item-desc">
-              <span class="item-name">Royal With Cheese</span>
-              <span class="item-price">$7</span>
-            </p>
-            <button class="addtocart-btn">Add to Cart</button>
-          </div>
+            <div class="content">
+                <img class="item-img" src="./images/cheeseburger.jpg" alt="">
+                <p class="item-desc">
+                    <span class="item-name">Royal With Cheese</span>
+                    <span class="item-price">$7</span>
+                </p>
+                <button class="addtocart-btn">Add to Cart</button>
+            </div>
         </div>
         <div class="item">
-          <div class="content">
-            <img class="item-img" src="./images/drink.jpg" alt="">
-            <p class="item-desc">
-              <span class="item-name">Drink</span>
-              <span class="item-price">$1</span>
-            </p>
-            <button class="addtocart-btn">Add to Cart</button>
-          </div>
+            <div class="content">
+                <img class="item-img" src="./images/drink.jpg" alt="">
+                <p class="item-desc">
+                    <span class="item-name">Drink</span>
+                    <span class="item-price">$1</span>
+                </p>
+                <button class="addtocart-btn">Add to Cart</button>
+            </div>
         </div>
         <div class="item">
-          <div class="content">
-            <img class="item-img" src="./images/fries.jpg" alt="">
-            <p class="item-desc">
-              <span class="item-name">Fries</span>
-              <span class="item-price">$2</span>
-            </p>
-            <button class="addtocart-btn">Add to Cart</button>
-          </div>
+            <div class="content">
+                <img class="item-img" src="./images/fries.jpg" alt="">
+                <p class="item-desc">
+                    <span class="item-name">Fries</span>
+                    <span class="item-price">$2</span>
+                </p>
+                <button class="addtocart-btn">Add to Cart</button>
+            </div>
         </div>
 
     </div>
 
     <footer>
         <p>
-          Committed to serving the best burgers since yesterday!
-          <a href="#"><button class="contact">Contact Information</button></a>
+            Committed to serving the best burgers since yesterday!
+            <a href="#"><button class="contact">Contact Information</button></a>
         </p>
-
     </footer>
 
     <script src="./scripts/menu.js"></script>
+
 </body>
 
 </html>
