--- a/cart.html
+++ b/cart.html
@@ -2,29 +2,35 @@
 
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cart Page</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
   </head>
 
   <body>
 
     <header>
-
-      <h1><a href="./main.html" class="logo"><em>HUNGRY BURGERS</em></a></h1>
-
-      <nav>
-        <ul>
-          <li><a href="#">Navigation</a></li>
-          <li><a href="./cart.html">Cart</a></li>
-          <li><a href="#">Register</a></li>
-        </ul>
-        <div class="login-btn"><a href="./signin.html"><b>LOGIN</b></a></div>
-      </nav>
-
+        <h1><a href="./index.html" id="logo">HUNGRY BURGERS</a></h1>
+        <nav>
+            <ul>
+                <a href="./login.html" id="login-link">
+                    <li>Login/Register</li>
+                </a>
+                <a href="#">
+                    <li>Navigation</li>
+                </a>
+                <a href="./cart.html">
+                    <li id="cart-btn">Cart(0 Items)</li>
+                </a>
+                <div id="total-cost">$0</div>
+            </ul>
+        </nav>
     </header>
 
     <div class="cart">
-      <h2>CART</h2>
-
+      <h2>Shopping Cart</h2>
       <table>
 
         <thead>
@@ -37,62 +43,52 @@
 
         <tr>
           <td>
-            <a href="#"><h3>Cheeseburger</h3></a>
-            <p>$7</p>
-            <p>
-              <button>REMOVE</button>
-            </p>
+            <a href="./index.html"><h3 class="item-name">Cheeseburger</h3></a>
+            <p class="cart-price">$7</p>
+              <button class="cart-remove-btn">REMOVE</button>
           </td>
           <td>
-            <input type='number' value='1'>
+            <input type='number' value='1' class="cart-quantity" min="1" max="1000">
           </td>
           <td>
-            <p class="cart-total">$7</p>
+            <p class="item-total">$7</p>
           </td>
         </tr>
-
-        <!--TEMP until separating-line works-->
-        <tr>
-          <td colspan="3"><hr></td>
-        </tr>
-
-        <tr class="separating-line">
-          <td>
-            <a href="#"><h3>Drink</h3></a>
-            <p>$1</p>
-            <p>
-              <button>REMOVE</button>
-            </p>
-          </td>
-          <td>
-            <input type='number' value='2'>
-          </td>
-          <td>
-            <p class="cart-total">$2</p>
-          </td>
-        </tr>
-
+        <!--Line Separator-->
         <tr>
           <td colspan="3"><hr></td>
         </tr>
 
         <tr>
-          <th colspan='2' class="totals-label">Subtotal: </th>
+          <td>
+            <a href="./index.html"><h3 class="item-name">Drink</h3></a>
+            <p class="cart-price">$1</p>
+              <button class="cart-remove-btn">REMOVE</button>
+          </td>
+          <td>
+            <input type='number' value='2' class="cart-quantity" min="1" max="1000">
+          </td>
+          <td>
+            <p class="item-total">$2</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="3"><hr></td>
+        </tr>
+
+        <tr class="endofcart">
+          <th colspan='2' class="totals-label" id="cart-subtotal">Subtotal: </th>
           <td><div class="totals-amt">$9</div></td>
         </tr>
         <tr>
-          <th colspan='2' class="totals-label">Sales Tax: </th>
+          <th colspan='2' class="totals-label" id="cart-totaltax">Sales Tax: </th>
           <td><div class="totals-amt">$1</div></td>
-        </tr>
-        <tr>
-          <th colspan='2' class="totals-label">Delivery: </th>
-          <td><div class="totals-amt">$-</div></td>
         </tr>
 
         <tr>
-          <tfoot>
-            <th colspan='2' class="full-total">TOTAL</th>
-            <td><div class="full-totalamt">$10</div></td>
+          <tfoot class="bottom">
+            <th colspan='2' class="full-total">TOTAL:</th>
+            <td class="full-total" id="cart-total">$0</td>
           </tfoot>
         </tr>
 
@@ -106,11 +102,12 @@
 
     </div>
 
-
     <footer>
-      <p>Committed to serving the best burgers since yesterday!</p>
-      <div class="contact"><a href="#">Contact</a></div>
+        <p>
+            Committed to serving the best burgers since yesterday!
+            <a href="#"><button class="contact">Contact Information</button></a>
+        </p>
     </footer>
-
+    <script src="./scripts/cart.js"></script>
   </body>
 </html>
