Update total count in cart html/js

--- a/cart.html
+++ b/cart.html
@@ -77,12 +77,12 @@
         </tr>
 
         <tr class="endofcart">
-          <th colspan='2' class="totals-label" id="cart-subtotal">Subtotal: </th>
-          <td><div class="totals-amt">$9</div></td>
+          <th colspan='2' class="totals-label">Subtotal: </th>
+          <td><div class="totals-amt" id="cart-subtotal">$9</div></td>
         </tr>
         <tr>
-          <th colspan='2' class="totals-label" id="cart-totaltax">Sales Tax: </th>
-          <td><div class="totals-amt">$1</div></td>
+          <th colspan='2' class="totals-label" >Sales Tax: </th>
+          <td><div class="totals-amt" id="cart-totaltax">$1</div></td>
         </tr>
 
         <tr>
