Added ajax request and jquery

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <script type="text/javascript" src="./scripts/jquery-3.2.0.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -33,67 +34,6 @@
     <div class="menu">
 
         <h2>MENU</h2>
-
-        <div class="item">
-            <div class="content">
-                <img class="item-img" src="./images/plainburger.jpg" alt="">
-                <p class="item-desc">
-                    <span class="item-name">Plain Burger</span>
-                    <span class="item-price">$4</span>
-                </p>
-                <button class="addtocart-btn">Add to Cart</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="content">
-                <img class="item-img" src="./images/chickenburger.jpg" alt="">
-                <p class="item-desc">
-                    <span class="item-name">Chicken Burger</span>
-                    <span class="item-price">$5</span>
-                </p>
-                <button class="addtocart-btn">Add to Cart</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="content">
-                <img class="item-img" src="./images/cheeseburger.jpg" alt="">
-                <p class="item-desc">
-                    <span class="item-name">Quarter-Pounder With Cheese</span>
-                    <span class="item-price">$6</span>
-                </p>
-                <button class="addtocart-btn">Add to Cart</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="content">
-                <img class="item-img" src="./images/cheeseburger.jpg" alt="">
-                <p class="item-desc">
-                    <span class="item-name">Royal With Cheese</span>
-                    <span class="item-price">$7</span>
-                </p>
-                <button class="addtocart-btn">Add to Cart</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="content">
-                <img class="item-img" src="./images/drink.jpg" alt="">
-                <p class="item-desc">
-                    <span class="item-name">Drink</span>
-                    <span class="item-price">$1</span>
-                </p>
-                <button class="addtocart-btn">Add to Cart</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="content">
-                <img class="item-img" src="./images/fries.jpg" alt="">
-                <p class="item-desc">
-                    <span class="item-name">Fries</span>
-                    <span class="item-price">$2</span>
-                </p>
-                <button class="addtocart-btn">Add to Cart</button>
-            </div>
-        </div>
 
     </div>
 
