Completed main menu ajax w/ modal

--- a/index.html
+++ b/index.html
@@ -33,8 +33,23 @@
 
     <div class="menu">
 
+      <div id="menu_modal" class="modal">
+        <p>Click again to close.</p>
+        <h2 id="modal_title"></h2>
+        <img id="modal_img" src=""/>
+        <p id="modal_desc"></p>
+        <p id="modal_price"></p>
+      </div>
         <h2>MENU</h2>
-
+        <!-- <div class="item">
+          <div class="content">
+            <img src="./images/cheeseburger.jpg" class="item-img"/>
+              <span class="item-name">Quarter-Pounderasdfasdfasdfasdfasfdadfasdfasdfasdf With Cheese</span>
+              <span class="item-price">$6</span>
+            <button class="addtocart-btn">Add to Cart</button>
+            <p class="item-desc">asdf</p>
+          </div>
+        </div> -->
     </div>
 
     <footer>
