Completed ajax implementation for cart along with removal and quantity change operations

--- a/cart.html
+++ b/cart.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+      <script type="text/javascript" src="./scripts/jquery-3.2.0.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -41,25 +42,7 @@
           </tr>
         </thead>
 
-        <tr>
-          <td>
-            <a href="./index.html"><h3 class="item-name">Cheeseburger</h3></a>
-            <p class="cart-price">$7</p>
-              <button class="cart-remove-btn">REMOVE</button>
-          </td>
-          <td>
-            <input type='number' value='1' class="cart-quantity" min="1" max="1000">
-          </td>
-          <td>
-            <p class="item-total">$7</p>
-          </td>
-        </tr>
-        <!--Line Separator-->
-        <tr>
-          <td colspan="3"><hr></td>
-        </tr>
-
-        <tr>
+        <!-- <tr>
           <td>
             <a href="./index.html"><h3 class="item-name">Drink</h3></a>
             <p class="cart-price">$1</p>
@@ -74,7 +57,7 @@
         </tr>
         <tr>
           <td colspan="3"><hr></td>
-        </tr>
+        </tr> -->
 
         <tr class="endofcart">
           <th colspan='2' class="totals-label">Subtotal: </th>
