Backend for cart/menu completed. Post for registration began

--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,7 @@
 <html>
 
 <head>
+    <script type="text/javascript" src="./scripts/jquery-3.2.0.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -35,19 +36,19 @@
     <div class="login-reg">
         <h2>Account Login</h2>
         <input type='checkbox' id='form-switch'>
-        <form id='login-form' action="" method='post'>
+        <form id='login-form'>
             <input type="text" placeholder="Username" required>
             <input type="password" placeholder="Password" required>
             <button type='submit'>Login</button>
-            <label for='form-switch'><span>Not registered? Register here.</span></label>
+            <label for='form-switch' id='login-submit'><span>Not registered? Register here.</span></label>
         </form>
-        <form id='register-form' action="" method='post'>
-            <input type="text" placeholder="Full Name" required>
-            <input type="text" placeholder="Username" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
+        <form id='register-form'>
+            <input type="text" placeholder="Full Name" id='reg-name' required>
+            <input type="text" placeholder="Username" id='reg-user' required>
+            <input type="email" placeholder="Email" id='reg-email' required>
+            <input type="password" placeholder="Password" id='reg-pass' required>
             <input type="password" placeholder="Re Password" required>
-            <button type='submit'>Register</button>
+            <button type='submit' id='register-submit'>Register</button>
             <label for='form-switch'>Already registered? Login here.</label>
         </form>
     </div>
@@ -59,6 +60,7 @@
         </p>
     </footer>
 
+    <script src="./scripts/login.js"></script>
 </body>
 
 </html>
